# QuietKeeper

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/noisemeter/app/data/: NoiseEventDaoTest.kt
app/src/androidTest/java/com/quietkeeper/app/data/: NoiseEventDaoTest.kt
app/src/androidTest/java/com/quietkeeper/app/ui/: ScreensUiTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/buffer/: RingBuffer.cpp  RingBuffer.h
app/src/main/cpp/dsp/: AWeighting.cpp  AWeighting.h  Decibel.cpp  Decibel.h  FrameProcessor.cpp  FrameProcessor.h
app/src/main/cpp/engine/: AAudioSource.cpp  AAudioSource.h  AudioEngine.cpp  AudioEngine.h
app/src/main/cpp/io/: WavWriter.cpp  WavWriter.h
app/src/main/cpp/jni/: native-lib.cpp  native-lib.h
app/src/main/java/com/noisemeter/app/: MainActivity.kt
app/src/main/java/com/noisemeter/app/audio/: AudioEngine.kt  MeasurementService.kt
app/src/main/java/com/noisemeter/app/data/: AppDatabase.kt  NoiseEvent.kt  NoiseEventDao.kt
app/src/main/java/com/noisemeter/app/sensor/: MovementDetector.kt
app/src/main/java/com/quietkeeper/app/: MainActivity.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/cpp/: AWeightingTest.cpp  AudioEngineTest.cpp  CMakeLists.txt  DecibelTest.cpp  FrameProcessorTest.cpp  RingBufferTest.cpp  SanityTest.cpp  WavWriterTest.cpp
docs/: CALIBRATION_PROCEDURE.md  MEASUREMENT_CORE_DEVICE_TEST.md  PRIVACY_POLICY_DRAFT.md  REMAINING_WORK.md
docs/design/: noise-app-mockups.html
docs/superpowers/plans/: 2026-06-20-measurement-core-ndk.md
docs/superpowers/specs/: 2026-06-20-noise-measurement-core-design.md
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  vite-env.d.ts
web/src/components/: AudioPlayerStub.tsx  GlassCard.tsx  Toast.tsx
web/src/data/: config.ts  firestore.ts  index.ts  mock.ts  types.ts
web/src/styles/: glass.css
web/src/views/: Calendar.tsx  Dashboard.tsx  Report.tsx
(+39 files in other folders)
